--- a/.github/workflows/quarto.yaml
+++ b/.github/workflows/quarto.yaml
@@ -2,7 +2,7 @@ name: Render and Publish
 on:
   push:
     branches:
-      - main  # changes pushed to this branch will trigger a build.
+      - master  # changes pushed to this branch will trigger a build.
 
 #configure manual trigger
 # on:
