--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,14 +19,16 @@ website:
     logo: www/images/logos/setonix-white.png
     logo-alt: "Setonix"
     right:
-      - about.qmd
       - posts/index.qmd
+      - faq.qmd
       - icon: fire
         href: https://fetlife.com/users/16247449
       - icon: instagram
         href: https://instagram.com/setonix.shibari
       - icon: tumblr
         href: https://www.tumblr.com/setonix-shibari
+      - text: "![](www/images/logos/bsky.svg){height='1em'}"
+        href: https://bsky.app/profile/setonix-shibari.bsky.social
 format:
   html:
     theme: [darkly, www/styles.scss]
