--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,7 +27,7 @@ website:
         href: https://instagram.com/setonix.shibari
       - icon: tumblr
         href: https://www.tumblr.com/setonix-shibari
-      - text: "![](www/images/logos/bsky.svg){height='1em'}"
+      - text: "![](/www/images/logos/bsky.svg){height='1em'}"
         href: https://bsky.app/profile/setonix-shibari.bsky.social
 format:
   html:
