--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,7 +21,7 @@ website:
     right:
       - posts/index.qmd
       - faq.qmd
-      - icon: fire
+      - text: "![](/www/images/logos/fetlife.svg){height='1.3em'}"
         href: https://fetlife.com/users/16247449
       - icon: instagram
         href: https://instagram.com/setonix.shibari
@@ -29,6 +29,10 @@ website:
         href: https://www.tumblr.com/setonix-shibari
       - text: "![](/www/images/logos/bsky.svg){height='1em'}"
         href: https://bsky.app/profile/setonix-shibari.bsky.social
+    page-footer:
+      right: 
+        - text: "![](/www/images/logos/cc-by-sa-nc.svg){height='1.5em'}"
+          href: https://creativecommons.org/licenses/by-nc-sa/4.0/deed.en
 format:
   html:
     theme: [darkly, www/styles.scss]
