--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,6 +21,7 @@ website:
     right:
       - posts/index.qmd
       - photos/index.qmd
+      - sets/index.qmd
       - faq.qmd
       - text: "![](/www/images/logos/fetlife.svg){height='1.3em'}"
         href: https://fetlife.com/users/16247449
