--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,7 +31,7 @@ website:
         href: https://www.tumblr.com/setonix-shibari
       - text: "![](/www/images/logos/bsky.svg){height='1em'}"
         aria-label: BlueSky
-        href: https://bsky.app/profile/setonix-shibari.bsky.social
+        href: https://bsky.app/profile/setonix.art
       - icon: envelope-heart-fill
         aria-label: Contact Me
         href: mailto:setonix.shibari@gmail.com
